tests/rascal/negative/type_errors/L1/18_expression_ES10_D4_52.ob
MODULE Test18;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := ((+ (- (0 * 200))) # (((2 + 2) - (1223 MOD 1223)) + ((- z) + (+ 1223))));
               q := ((((y - x) - (y + 200)) + ((- z) - (x - y))) >= (((- z) * (x - z)) DIV ((- z) * (200 DIV 1223))));
               p := ((((- 2) * (x - 2)) >= (+ (z - 1223))) OR (((+ 0) * (z * 1223)) <= ((x * 2) * (1223 + y))));
               r := ((- (+ (0 * 2))) > (((- z) - (0 * 1223)) DIV ((- 1) * (- 1))));
               r := ((~ ((2 <= x) OR (~ r))) & (((0 DIV y) - (x * x)) <= ((1223 MOD 2) - (+ 0))));
               x := (+ ((- (z + y)) - ((+ y) MOD (1 MOD z))));
               z := ((((2 MOD 0) DIV (200 - y)) + (- (z DIV y))) + (+ ((2 + y) MOD (200 MOD z))));
  (* error *)  r := ((+ ((- p) MOD (y * x))) >= (+ (+ (1223 MOD z))));
               q := (((- (1 - z)) - ((2 - x) - (2 - 1))) = (- ((1 MOD x) - (z + 0))));
               p := (((+ (- 2)) + ((- 1) DIV (- 1223))) > (- ((0 * x) * (x * 1))))
END Test18.